clean-ups: minor compiler warnings and FindBug issues resolved